checkout fork's parent

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
+          repository: 'TelegramMessenger/Telegram-iOS'
           submodules: 'recursive'
           fetch-depth: '0'
 
