[skip ci] Update build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Debug
         run: |
+          echo "Printing all environment variables"
+          printenv
           echo "Printing default keychain"
           security default-keychain
           echo "Trying to unlock keychain"
